<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#58bbed">

    <!-- Remplacez 'your_logo' par le nom de votre fichier de logo -->

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo4096"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/textview_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:textSize="8pt"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/main_label"
        android:textColor="@android:color/white" />
    <TextView
        android:id="@+id/textview_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_main"
        android:textSize="8pt"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:layout_marginRight="20dp"
        android:text="@string/current_settings"
        android:textColor="@android:color/white" />
    <TextView
        android:id="@+id/textview_base_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_settings"
        android:textSize="9pt"
        android:textStyle="bold"
        android:layout_marginTop="1dp"
        android:layout_marginStart="40dp"
        android:text="@string/base_url_text"
        android:textColor="@android:color/white" />
    <TextView
        android:id="@+id/textview_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_base_url"
        android:textSize="9pt"
        android:textStyle="bold"
        android:layout_marginTop="1dp"
        android:layout_marginStart="40dp"
        android:text="@string/tag_text"
        android:textColor="@android:color/white" />
    <TextView
        android:id="@+id/textview_ha_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_tag"
        android:textSize="9pt"
        android:textStyle="bold"
        android:layout_marginTop="1dp"
        android:layout_marginStart="40dp"
        android:text="@string/ha_url_text"
        android:textColor="@android:color/white" />
</RelativeLayout>